Update Material theme so that it better matches intent and provide update styles

--- a/serenity-app/src/main/res/values/color.xml
+++ b/serenity-app/src/main/res/values/color.xml
@@ -34,25 +34,25 @@
     <!--colorPrimary colors map to components and elements, such as app bars and buttons. -->
     <!--colorSecondary colors are most often used as accents on components, such as FABs and -->
     <!--selection controls.-->
-    <color name="color_primary">#1565c0</color>
-    <color name="color_primary_variant">#5e92f3</color>
-    <color name="color_secondary">#29b6f6</color>
-    <color name="color_secondary_variant">#73e8ff</color>
+    <color name="color_primary">#2196f3</color>
+    <color name="color_primary_variant">#1976d2</color>
+    <color name="color_secondary">#03a9f4</color>
+    <color name="color_secondary_variant">#bbdefb</color>
 
     <!--colorBackground appears behind scrollable content and is used for the default window-->
     <!--background. colorSurface is mapped to the surface of components such as cards, sheets-->
     <!--and menus. colorError is used to indicate an error state for components such as-->
     <!--text fields.-->
     <color name="color_background">#000000</color>
-    <color name="color_surface">#ffffff</color>
+    <color name="color_surface">#000000</color>
     <color name="color_error">#b00020</color>
 
     <!--"On" colors define how text, icons and strokes are colored in relation to the surface-->
     <!--on which they appear.-->
     <color name="color_on_primary">#ffffff</color>
-    <color name="color_on_secondary">#fafafa</color>
+    <color name="color_on_secondary">#000000</color>
     <color name="color_on_background">#ffffff</color>
-    <color name="color_on_surface">#000000</color>
+    <color name="color_on_surface">#ffffff</color>
     <color name="color_on_error">#ffffff</color>
 
 </resources>
