--- a/serenity-app/src/main/res/values/type.xml
+++ b/serenity-app/src/main/res/values/type.xml
@@ -63,6 +63,7 @@
 
     <style name="TextAppearance.AppTheme.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <!--Your custom type style here-->
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TextAppearance.AppTheme.Subtitle2" parent="TextAppearance.MaterialComponents.Subtitle2">
