--- a/serenity-app/src/main/res/layout-large/item_server_select_emby.xml
+++ b/serenity-app/src/main/res/layout-large/item_server_select_emby.xml
@@ -1,32 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/server_option_container"
+        android:id="@+id/server_name"
+        style="@style/Widget.AppTheme.Button.OutlinedButton.Emby"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:focusable="true"
+        android:layout_gravity="center_horizontal"
         android:clickable="true"
-        android:background="@drawable/selector_server"
-        android:foreground="?selectableItemBackground"
-        android:layout_gravity="center_horizontal">
+        android:focusable="true"
+        tools:text="Emby Server" />
 
-  <TextView
-      android:id="@+id/server_name"
-      android:layout_width="400dp"
-      android:layout_height="wrap_content"
-      android:textSize="20sp"
-      android:textColor="@color/lb_tv_white"
-      android:gravity="center"
-      android:background="@drawable/rounded_emby_green_corners"
-      android:padding="10dp"
-      android:layout_margin="5dp"
-      tools:text="Emby Server"
-      android:duplicateParentState="true"
-      />
-
-</FrameLayout>
