--- a/serenity-app/src/main/res/values/styles.xml
+++ b/serenity-app/src/main/res/values/styles.xml
@@ -53,17 +53,39 @@
 
     <style name="Widget.AppTheme.Button.OutlinedButton.Emby" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="strokeColor">@color/serenity_btn_stroke_color_selector</item>
-        <item name="rippleColor">?colorOnPrimary</item>
         <item name="android:textColor">?colorOnPrimary</item>
         <item name="backgroundTint">@color/serenity_emby_server_background_selector</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
 
     <style name="Widget.AppTheme.Button.OutlinedButton.Plex" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="strokeColor">@color/serenity_btn_stroke_color_selector</item>
-        <item name="rippleColor">?colorOnPrimary</item>
         <item name="android:textColor">?colorOnPrimary</item>
         <item name="backgroundTint">@color/serenity_plex_server_background_selector</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
 
+    <style name="Widget.AppTheme.Button.OutlinedButton.Manual" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="strokeColor">@color/serenity_btn_stroke_color_selector</item>
+        <item name="rippleColor">?colorOnPrimary</item>
+        <item name="android:textColor">?colorOnPrimary</item>
+        <item name="backgroundTint">@color/serenity_manual_server_background_selector</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
 
 </resources>
