Add Material Components CardView

--- a/serenity-app/src/main/res/values/styles.xml
+++ b/serenity-app/src/main/res/values/styles.xml
@@ -88,4 +88,8 @@
         <item name="android:layout_margin">5dp</item>
     </style>
 
+    <style name="Widget.AppTheme.CardView.Movie" parent="Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">#4d4e4f</item>
+    </style>
+
 </resources>
