Upgrade ExoPlayer to 2.9.6

--- a/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
+++ b/serenity-app/src/main/res/layout-large/activity_exoplayer_video.xml
@@ -13,7 +13,7 @@
       android:layout_height="match_parent"
       app:rewind_increment="10000"
       app:fastforward_increment="30000"
-      app:show_buffering="true"
+      app:show_buffering="when_playing"
    />
 
   <include layout="@layout/include_loading_progress"
